<resources>
    <string name="app_name">GuideTour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="map">Map</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sretenskiy_bulvar">Sretenskiy Bulvar</string>
    <string name="petrovskiy_bulvar">Petrovskiy Bulvar</string>
    <string name="svetnoy_bulvar">Svetnoy Bulvar</string>
    <string name="tverskoy_bulvar">Tverskoy Bulvar</string>
    <string name="textview">TextView</string>
    <string name="location_petrovskiy">Petrovskiy bud., Moskow</string>
    <string name="metro_trubnaya">Metro Trubnaya</string>
    <string name="brandshop">BRANDSHOP</string>
    <string name="locat_brandshop">Petrovskiy bud., 21</string>
    <string name="site_brandshop">brandshop.ru</string>
    <string name="church_bogolyuboov">Church Bogolyubovskoy ikoni</string>
    <string name="loc_church_bogol">28 Petrovka street</string>
    <string name="data_church_bogol">M. Trubnaya 580 m.</string>
    <string name="alltime">AllTime.ru</string>
    <string name="loc_alltime">Petrovskiy bud., 21</string>
    <string name="data_alltime">alltime.ru</string>
    <string name="loc_sretbul">Sretenskiy bulvar, Moskow</string>
    <string name="data_sretbul">Metro Sretenskiy bulvar</string>
    <string name="cafe_sandal">Cafe Sandal</string>
    <string name="loc_cafe_sandal">Sretenskiy bul., 3</string>
    <string name="data_cafe_sandal">cafesandal.ru</string>
    <string name="trikster">Theatre Trikster</string>
    <string name="loc_trikster">Sretenskiy bul., 6/1s2</string>
    <string name="data_trikster">trikst.com</string>
    <string name="nailon">Nailon Studio</string>
    <string name="loc_nailon">Sretensky bul., 6/1s1</string>
    <string name="data_nailon">+7(495) 120-18-03</string>
    <string name="loc_svetbulvd">Tsvetnoy bulvar, Moskow, Russia</string>
    <string name="data_svetbulvd">Metro Tsvetnoy bulvar</string>
    <string name="sirk">Moskovskiy tsirk Nikulina</string>
    <string name="loc_sirk">Tsvetnoy bulvar., 13</string>
    <string name="data_sirk">circusnikulin.ru</string>
    <string name="chaihona">Chaihona №1</string>
    <string name="loc_chaihona">Tsvetnoy bul., 2</string>
    <string name="data_chaihona">chaihona.ru</string>
    <string name="rinok">Tsentralniy rinok</string>
    <string name="loc_rinok">Rozhdestvensky Blvd., 1</string>
    <string name="data_rinok">moskowcentralmarket.ru</string>
    <string name="loc_tverskoy">Tverskoy bulvar, Moskow, Russia</string>
    <string name="data_tverskoy">Metro Tverskaya</string>
    <string name="teatr_pushkin">Teatr imeni Pushkina</string>
    <string name="loc_pushkin">Tverskoy blvd., 23</string>
    <string name="data_teatr_pushkin">teatrpushkin.ru</string>
    <string name="remy_kitch">Remy Kitchen Bakery</string>
    <string name="loc_remykitch">Malaya Bronnaya Str., 2</string>
    <string name="data_remykitch">remykitchenbakery.ru</string>
    <string name="mxat_gork">MXAT im. Gorkogo</string>
    <string name="loc_mxat">Tverskoy blvd., 22</string>
    <string name="data_mxat">mxat-teatr.ru</string>
</resources>