<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sretenskiy"
            android:icon="@drawable/bulvard_icon"
            android:title="@string/sretenskiy_bulvar" />
        <item
            android:id="@+id/nav_petrovskiy"
            android:icon="@drawable/bulvard_icon"
            android:title="@string/petrovskiy_bulvar" />
        <item
            android:id="@+id/nav_svetnoy"
            android:icon="@drawable/bulvard_icon"
            android:title="@string/svetnoy_bulvar"/>
        <item
            android:id="@+id/nav_tverskoy"
            android:icon="@drawable/bulvard_icon"
            android:title="@string/tverskoy_bulvar"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
    </group>
</menu>